test/scc/expr/semantic-errors/145.t
struct
{
	int a;
} *b[10];

int* c = &b[0]->a;